# django-sample-app

./: .env.example  .gitignore  Makefile  Procfile  README.md  manage.py  pyproject.toml  requirements.txt  settings.py
example_app/: urls.py  views.py
example_app/templates/: descope_login.html  memes.html
exampleapp/: admin.py  asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
static/: template.css
static/css/: style.css
templates/: admin_login.html  base.html  descope_login.html  summary.html
